--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "redicons": "^0.12.0",
     "timenames": "^1.1.0"
   },
   "devDependencies": {
